--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -26,7 +26,8 @@
             <div class="offcanvas-body">
                 <ul class="navbar-nav justify-content-center flex-grow-1 pe-3">
                     <li class="nav-item text-center">
-                        <a class="nav-link" routerLinkActive="nav-active" [routerLinkActiveOptions]="{exact: true}"
+                        <a class="nav-link" routerLinkActive="nav-active" 
+                        [routerLinkActiveOptions]="{exact: true}"
                             routerLink="/">Home</a>
                     </li>
 
