egnimos web update

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid fixed-bottom" style="background-color: rgb(0, 31, 0); padding: 50px 40px 50px 40px;">
+<div class="container-fluid" style="background-color: rgb(0, 31, 0); padding: 50px 40px 50px 40px;">
     <div class="d-flex flex-column">
         <div class="d-flex justify-content-start flex-column" style="margin-left: 40px;">
             <!-- icon -->
