--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -1,1 +1,33 @@
-<p>about works!</p>
+<div class="markdown-style">
+    <img src="assets/icons/Group_392-4.png" alt="" srcset="">
+    <h1 class="main-title-style">from egnimos</h1>
+    <hr>
+    <h3>
+        <b>egnimos</b> is a platform which brings developers, creators, designers and everyone who want to innovate
+        together,
+        egnimos provides the services in development and design, egnimos create the inovative products which helps
+        users, we want to help the users to grow and make their life in a good way, we care about you, that's why we
+        create these innovative products to help you, egnimos welcome every suggestion and feedbacks from you and we
+        need them, by these suggestion and feedbacks we can improve our products and services even more, and that's why
+        the suggestions and feedbacks are important to the egnimos, we are open for discussion also,
+    </h3>
+    <br>
+    <h3>
+        we need developers who want to innovate and help others, with egnimos, as rightnow, things are changing and we
+        are advancing towards new era with new technologies and with the changing era, the innovation is becoming even
+        more important, "as life changes, new problem comes with some new innovation"
+    </h3>
+    <br>
+    <blockquote class="custom-blockquote">
+        every problem has its own innovation
+    </blockquote>
+    <br>
+    <p>
+        we have to push ourself to create the new innovations and that's why we need you, egnimos is happy to welcome
+        you.
+    </p>
+    <br>
+    <h3>
+        - regards egnimos
+    </h3>
+</div>
