--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,3 +1,7 @@
-<div class="container-fluid justify-content-center">
-
+<div class="centered-div">
+    <div class="d-flex flex-column align-items-center">
+        <h3 class="title">A Place To Write, Share Learn and Try</h3>
+        <p class="desc" style="margin-left: 50px; margin-right: 50px;">The Creativity that needs to be done for building a thoughtful process that works smoothly
+            and makes your content grow like never before.</p>
+    </div>
 </div>
