Issues: auth screen added

--- a/src/app/pages/articles/articles.component.html
+++ b/src/app/pages/articles/articles.component.html
@@ -1,1 +1,12 @@
-<p>articles works!</p>
+<div class="container-fluid" style="padding-left: 40px;">
+    <div class="d-flex flex-column justify-content-center" style="height: 60vh; width: 60%;">
+        <h2 class="blog-title">egnimos blog</h2>
+        <p class="blog-para">All the recent articles and news or updates regarding egnimos are available here</p>
+    </div>
+    <br><br><br>
+    <div class="d-flex-flex-column">
+        <h2 class="section-heading">Most Recent</h2>
+        <hr>
+        <div style="height: 50vh;"></div>
+    </div>
+</div>
