--- a/src/app/pages/articles/articles.component.html
+++ b/src/app/pages/articles/articles.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid" style="padding-left: 40px;">
-    <div class="d-flex flex-column justify-content-center" style="height: 60vh; width: 60%;">
+    <div class="d-flex flex-column justify-content-center" style="margin-top: 50px; margin-bottom: 50px; width: 60%;">
         <h2 class="blog-title">egnimos blog</h2>
         <p class="blog-para">All the recent articles and news or updates regarding egnimos are available here</p>
     </div>
