--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -1,1 +1,49 @@
-<p>profile works!</p>
+<div class="container-fluid" style="padding-left: 20px; padding-right: 20px; padding-top: 50px;">
+    <!-- profile info which include "Name", "Profile Photo", "Joining date" -->
+    <div class="d-flex flex-row" style="height: 20vh; margin-left: 10px;">
+        <!-- image  -->
+        <div class="profile-image-style">
+        </div>
+        <div class="d-flex flex-column" style="padding: 10px;">
+            <h2>Name</h2>
+            <p>Joined In: Sun 12/67/2222</p>
+        </div>
+    </div>
+    <!-- tabs in which options are provided -->
+    <div style="padding: 10px; margin: 10px;">
+        <ul class="nav nav-tabs">
+            <li class="nav-item" role="presentation"><a class="nav-link" routerLinkActive="nav-tab-active"
+                    [routerLinkActiveOptions]="{exact:true}" routerLink="/profile/">
+                    Articles
+                </a></li>
+            <li class="nav-item" role="presentation">
+                <a class="nav-link" routerLinkActive="nav-tab-active" routerLink="/profile/drafts">
+                    Drafts
+                </a>
+            </li>
+            <li class="nav-item" role="presentation">
+                <a class="nav-link" routerLinkActive="nav-tab-active" routerLink="/profile/categories">
+                    Categories
+                </a>
+            </li>
+            <li class="nav-item" role="presentation">
+                <a class="nav-link" routerLinkActive="nav-tab-active" routerLink="/profile/edit-profile">
+                    Edit Profile
+                </a>
+            </li>
+        </ul>
+        <div class="container-fluid">
+            <div class="d-flex flex-column align-items-end justify-content-end" 
+            style="height: 10vh;">
+                <button class="btn btn-success">
+                    <i class="fas fa-pen-fancy"></i>
+                    Write Your Article
+                </button>
+            </div>
+        </div>
+    </div>
+    <!-- data based on tabs -->
+    <div style="padding: 10px; margin: 10px;">
+        <router-outlet></router-outlet>
+    </div>
+</div>
