editor code update

--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -35,7 +35,7 @@
         <div class="container-fluid">
             <div class="d-flex flex-column align-items-end justify-content-end" 
             style="height: 10vh;">
-                <button class="btn btn-success">
+                <button class="btn btn-success" (click)="navToWriteBlog()">
                     <i class="fas fa-pen-fancy"></i>
                     Write Your Article
                 </button>
