--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -5,8 +5,8 @@
         <div class="profile-image-style">
         </div>
         <div class="d-flex flex-column" style="padding: 10px;">
-            <h2>Name</h2>
-            <p>Joined In: Sun 12/67/2222</p>
+            <h2>{{userInfo?.name}}</h2>
+            <p>Joined In: {{userInfo?.createdAt}}</p>
         </div>
     </div>
     <!-- tabs in which options are provided -->
