--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -26,8 +26,7 @@
             <div class="offcanvas-body">
                 <ul class="navbar-nav justify-content-center flex-grow-1 pe-3">
                     <li class="nav-item text-center">
-                        <a class="nav-link" routerLinkActive="nav-active" 
-                        [routerLinkActiveOptions]="{exact: true}"
+                        <a class="nav-link" routerLinkActive="nav-active" [routerLinkActiveOptions]="{exact: true}"
                             routerLink="/">Home</a>
                     </li>
 
@@ -37,11 +36,14 @@
                     <li class="nav-item text-center">
                         <a class="nav-link" routerLinkActive="nav-active" routerLink="/articles">Articles</a>
                     </li>
-                    <li class="nav-item text-center">
+                    <li class="nav-item text-center" *ngIf="!isLogin">
                         <a class="nav-link" routerLinkActive="nav-active" routerLink="/auth">Login</a>
                     </li>
-                    <li class="nav-item text-center">
+                    <li class="nav-item text-center" *ngIf="isLogin">
                         <a class="nav-link" routerLinkActive="nav-active" routerLink="/profile">Profile</a>
+                    </li>
+                    <li class="nav-item text-center" *ngIf="isLogin">
+                        <a class="nav-link" (click)="signout()" style="color: red; cursor: pointer;">Logout</a>
                     </li>
                 </ul>
             </div>
