--- a/src/app/pages/editor/editor.component.css
+++ b/src/app/pages/editor/editor.component.css
@@ -1,3 +1,18 @@
-.editor-container{
-    width: 50vh;
+.editor-container {
+    width: 100vh;
 }
+
+
+
+/* div#editorjs {
+    width: 100vh;
+} */
+
+/* .ce-block__content,
+.ce-toolbar__content {
+    max-width: calc(100% - 100px) !important;
+} */
+
+/* .cdx-block {
+    max-width: 100% !important;
+} */
