--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
 @import url('https://fonts.googleapis.com/css2?family=Gochi+Hand&family=Indie+Flower&family=Raleway:wght@300;400;500;600;700;800;900&family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700&family=Share+Tech&display=swap');
 
+div.ce-paragraph[data-placeholder]:empty::before {
+    content: attr(data-placeholder);
+    color: #707684;
+    font-weight: normal;
+    font-size: 28px !important;
+}
