--- a/src/app/pages/profile/editprofile/editprofile.component.html
+++ b/src/app/pages/profile/editprofile/editprofile.component.html
@@ -9,6 +9,18 @@
         <br>
         <!-- FORM -->
         <form class="row g-3" (ngSubmit)="submit()" #ed="ngForm">
+            <!-- PROFILE IMAGE -->
+            <div class="d-flex flex-column">
+                <!-- image  -->
+                <img class="profile-image-style" [src]="photoURL">
+                <br>
+                <div class="input-group mb-3">
+                    <input type="file" class="form-control" id="profilePhoto" [(ngModel)]="profilePhotoFile"
+                        name="profilePhoto">
+                    <button class="btn btn-outline-secondary input-group-text" for="profilePhoto"
+                        (click)="uploadPhoto()" type="button">Upload</button>
+                </div>
+            </div>
             <!-- NAME -->
             <div class="mb-3">
                 <label for="name" class="form-label">Name</label>
