:fire: egnimos first update for alpha release

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -36,6 +36,9 @@
                     <li class="nav-item text-center">
                         <a class="nav-link" routerLinkActive="nav-active" routerLink="/articles">Articles</a>
                     </li>
+                    <li class="nav-item text-center">
+                        <a class="nav-link" routerLinkActive="nav-active" routerLink="/categories">Categories</a>
+                    </li>
                     <li class="nav-item text-center" *ngIf="!isLogin">
                         <a class="nav-link" routerLinkActive="nav-active" routerLink="/auth">Login</a>
                     </li>
