--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -20,11 +20,11 @@
                     Drafts
                 </a>
             </li>
-            <li class="nav-item" role="presentation">
+            <!-- <li class="nav-item" role="presentation">
                 <a class="nav-link" routerLinkActive="nav-tab-active" routerLink="/profile/categories">
                     Categories
                 </a>
-            </li>
+            </li> -->
             <li class="nav-item" role="presentation">
                 <a class="nav-link" routerLinkActive="nav-tab-active" routerLink="/profile/edit-profile">
                     Edit Profile
