--- a/src/app/components/nothing-found/nothing-found.component.html
+++ b/src/app/components/nothing-found/nothing-found.component.html
@@ -1,3 +1,6 @@
 <div class="d-flex flex-column justify-content-center align-items-center" style="margin: 20px;">
     <ng-lottie [options]="lottieOptions" [height]="200"></ng-lottie>
+    <div style="height: 30px;"></div>
+    <p style="font-size: large; font-weight: 24px; font-family: 'Rubik', sans-serif; font-weight: 500;">Nothing
+        to Show</p>
 </div>
