--- a/src/app/pages/profile/drafts/drafts.component.html
+++ b/src/app/pages/profile/drafts/drafts.component.html
@@ -1,1 +1,22 @@
-<p>drafts works!</p>
+<div class="container-fluid">
+    <div *ngIf="articles.length==0 && !isLoading">
+        <app-nothing-found></app-nothing-found>
+    </div>
+
+    <!-- ERROR STATMENT -->
+    <div class="alert alert-danger" *ngIf="errorMsg">
+        <p>{{errorMsg}}</p>
+    </div>
+    <div class="card-group" *ngIf="articles.length != 0">
+        <app-article-box *ngFor="let aInf of articles" [articleInf]="aInf"></app-article-box>
+    </div>
+    <br>
+    <app-loader *ngIf="isLoading"></app-loader>
+    <br>
+    <div class="d-flex justify-content-center align-items-center" style="height: 100%; width: 100%;"
+        *ngIf="articles.length != 0 || !isLoading">
+        <button type="submit" class="btn btn-outline-success" (click)="loadData()">
+            <fa-icon [icon]="addIcon"></fa-icon>
+            Load More</button>
+    </div>
+</div>
