--- a/src/app/pages/categories/categories.component.html
+++ b/src/app/pages/categories/categories.component.html
@@ -9,8 +9,10 @@
         </h4>
         <br><br>
         <!-- search categories -->
-        <input class="form-control form-control-lg" type="text" placeholder="Search Your Categories"
-            aria-label="search categories" [(ngModel)]="searchKeyword" (ngModelChange)="searchQuizCategory()">
+        <div class="container">
+            <input class="form-control form-control-lg" type="text" placeholder="Search Your Categories"
+                aria-label="search categories" [(ngModel)]="searchKeyword" (ngModelChange)="searchQuizCategory()">
+        </div>
     </div>
 
     <!-- categories list -->
