--- a/src/app/pages/profile/books/create-book/create-module/create-module.component.html
+++ b/src/app/pages/profile/books/create-book/create-module/create-module.component.html
@@ -10,9 +10,20 @@
 
     <!-- topic selection panel -->
     <div class="row">
-        <div class="col" style="background-color: red;height: 100vh; width: 50%;">
-            Column</div>
-        <div class="col" style="background-color: green;height: 100vh; width: 50%;">
+        <div class="col"
+            style="height: 100vh; width: 50%; border: 1px solid #198754; margin-right: 10px; border-radius: 4%; padding: 16px;">
+
+            <div class="mb-3">
+                <!-- <label for="moduleName" class="form-label">Name</label> -->
+                <input type="email" class="form-control form-control-lg" id="moduleName"
+                    placeholder="search your article">
+            </div>
+
+            <!-- DIV target -->
+
+        </div>
+        <div class="col"
+            style="height: 100vh; width: 50%; border: 1px solid #198754; margin-left: 10px; border-radius: 4%; padding: 16px;">
             Column</div>
     </div>
 </div>
