book crud update

--- a/src/app/components/article-box/article-box.component.html
+++ b/src/app/components/article-box/article-box.component.html
@@ -10,7 +10,7 @@
             {{articleInf?.category?.name}}</span>
         <!-- DESCRIPTION -->
         <p class="card-text truncate description">
-            {{articleInf.description}}</p>
+            {{articleInf?.description}}</p>
         <!-- AUTHOR INFO -->
         <div class="d-flex flex-row align-items-start justify-content-start" style="margin-top: 20px;">
             <!-- image -->
