--- a/src/app/pages/profile/books/create-book/create-book.component.html
+++ b/src/app/pages/profile/books/create-book/create-book.component.html
@@ -46,7 +46,7 @@
                             <label for="name" class="form-label">Add Tags</label>
                             <div class="input-group mb-3">
                                 <input type="text" class="form-control" id="name" placeholder="enter your name here"
-                                    ngModel name="tag" required>
+                                    ngModel name="tag">
                                 <button class="btn btn-outline-secondary" type="button" (click)="addTag()"><i
                                         class="fa-solid fa-plus"
                                         style="font-weight: 500px; font-size: 20px;"></i></button>
