--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -20,11 +20,11 @@
                     Drafts
                 </a>
             </li>
-            <li class="nav-item" role="presentation">
+            <!-- <li class="nav-item" role="presentation">
                 <a class="nav-link" routerLinkActive="nav-tab-active" routerLink="/profile/books">
                     Books
                 </a>
-            </li>
+            </li> -->
             <li class="nav-item" role="presentation">
                 <a class="nav-link" routerLinkActive="nav-tab-active" routerLink="/profile/edit-profile">
                     Edit Profile
@@ -37,10 +37,10 @@
                     <i class="fas fa-pen-fancy"></i>
                     Write Your Article
                 </button>
-                <button class="btn btn-success" style="margin: 5px;" (click)="navToCreateBook()">
+                <!-- <button class="btn btn-success" style="margin: 5px;" (click)="navToCreateBook()">
                     <i class="fa-solid fa-book"></i>
                     Create a Book
-                </button>
+                </button> -->
             </div>
         </div>
     </div>
